--- a/css/scribbler-global.css
+++ b/css/scribbler-global.css
@@ -115,9 +115,25 @@ hr {
   padding: 0 1.5rem;
 }
 
-.code--inline {
-  padding: 3px 6px;
-  font-size: 80%;
+.code--block {
+  white-space: pre-line;
+  padding: 0 1.5rem;
+}
+
+.code-hasil {
+}
+
+/* box code */
+.CodeMirror.cm-s-default {
+  background-color: #f8f8fa;
+  height: 100%;
+  width: 100%;
+}
+#iframeResult,
+#iframeSource {
+  background-color: #f8f8fa;
+  height: 350px;
+  width: 100%;
 }
 
 /* buttons */
@@ -149,6 +165,38 @@ hr {
 }
 
 .button--primary:hover::after {
+  transform: rotate(90deg);
+}
+
+/* buttons */
+.button--primary-a {
+  padding: 10px 22px;
+  background-color: var(--accent-color);
+  color: white;
+  position: relative;
+  text-decoration: none;
+  border: 0;
+  transition: all 0.3s ease-out;
+}
+
+.button--primary-a:after {
+  position: absolute;
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  background-color: var(--accent-color-light);
+  right: -0.4rem;
+  top: -0.4rem;
+  transition: all 0.3s ease-out;
+}
+
+.button--primary-a:hover {
+  text-shadow: 0px 1px 1px var(--accent-color-dark);
+  color: white;
+  transform: translate3D(0, -3px, 0);
+}
+
+.button--primary-a:hover::after {
   transform: rotate(90deg);
 }
 
